--- a/src/options/app/config/urls/styles.mod.scss
+++ b/src/options/app/config/urls/styles.mod.scss
@@ -1,3 +1,20 @@
 .container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  width: 400px;
+
+  border: 1px solid #444;
+
+  .header {
+    display: flex;
+    padding: 5px;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+
+    padding: 5px;
+  }
 }
