--- a/src/options/app/config/urls/url/styles.mod.scss
+++ b/src/options/app/config/urls/url/styles.mod.scss
@@ -1,3 +1,15 @@
 .container {
+  display: flex;
+
   width: 100%;
+
+  border: 1px solid #444;
+  padding: 5px;
+
+  .header {
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+  }
 }
