--- a/src/popup/root.scss
+++ b/src/popup/root.scss
@@ -10,16 +10,6 @@
 //   outline: 0.1px red solid;
 // }
 
-html,
-body,
-#root {
-  display: flex;
-  justify-content: center;
-
-  width: 100vw;
-  height: 100vh;
-}
-
 body {
   font-family: 'Alegreya Sans', sans-serif;
 
@@ -32,6 +22,9 @@ body {
 
   margin: 0;
   padding: 0;
+
+  width: 400px;
+  height: 400px;
 }
 
 input::-webkit-outer-spin-button,
