Modified url form

--- a/src/popup/app/config/urls/styles.mod.scss
+++ b/src/popup/app/config/urls/styles.mod.scss
@@ -3,12 +3,13 @@
   flex-direction: column;
 
   width: 100%;
-
-  border: 1px solid #444;
+  height: 100%;
 
   .header {
     display: flex;
     padding: 5px;
+
+    height: 20px;
   }
 
   .list {
