--- a/src/popup/app/config/urls/url/styles.mod.scss
+++ b/src/popup/app/config/urls/url/styles.mod.scss
@@ -1,12 +1,16 @@
 .container {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 
   width: 100%;
 
-  border: 1px solid #444;
-  padding: 5px;
+  padding: 10px;
+  border-radius: 10px;
 
-  .header {
+  background-color: hsl(0, 0%, 95%);
+
+  .form {
     display: flex;
     flex-direction: row;
 
