--- a/src/popup/root.scss
+++ b/src/popup/root.scss
@@ -27,6 +27,12 @@ body {
   height: 400px;
 }
 
+html,
+body,
+#root {
+  border-radius: 10px;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   margin-left: 10px;
