--- a/src/popup/app/config/urls/url/styles.mod.scss
+++ b/src/popup/app/config/urls/url/styles.mod.scss
@@ -4,16 +4,45 @@
 
   width: 100%;
 
-  padding: 10px;
-  border-radius: 5px;
+  background-color: var(--surface-main);
+  color: var(--surface-on);
 
-  background-color: hsl(0, 0%, 95%);
+  font-size: 12px;
 
-  .static {
+  .header {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    align-items: center;
 
     width: 100%;
+    height: 40px;
+
+    padding: 5px;
+
+    .status {
+      width: 10%;
+    }
+
+    .title {
+      display: flex;
+      flex-direction: column;
+
+      padding-left: 10px;
+      width: 75%;
+
+      .name {
+      }
+
+      .detail {
+        font-size: 11px;
+        color: var(--primary-border);
+      }
+    }
+
+    border-bottom: 1px solid var(--primary-border);
+
+    .edit {
+      width: 10%;
+    }
   }
 }
