--- a/src/popup/app/footer/styles.mod.scss
+++ b/src/popup/app/footer/styles.mod.scss
@@ -6,4 +6,9 @@
   height: 50px;
 
   padding: 10px;
+
+  background-color: var(--background-main);
+  color: var(--background-on);
+
+  border-top: 1px solid var(--primary-border);
 }
