--- a/src/popup/app/styles.mod.scss
+++ b/src/popup/app/styles.mod.scss
@@ -2,5 +2,6 @@
   width: 100vw;
   height: 100vh;
 
-  padding: 10px;
+  background-color: var(--background-main);
+  color: var(--background-on);
 }
