--- a/src/popup/app/config/urls/url/urlform/styles.mod.scss
+++ b/src/popup/app/config/urls/url/urlform/styles.mod.scss
@@ -5,12 +5,19 @@
   align-items: center;
 
   width: 100%;
+  padding: 5px;
 
   .form {
     display: flex;
     flex-direction: column;
 
     width: 90%;
-    padding: 10px;
   }
+
+  .footer {
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  border-bottom: 1px solid var(--primary-border);
 }
