--- a/src/popup/app/header/styles.mod.scss
+++ b/src/popup/app/header/styles.mod.scss
@@ -1,4 +1,7 @@
 .container {
+  display: flex;
+  align-items: center;
+
   width: 100vw;
   height: 50px;
 
@@ -6,4 +9,9 @@
 
   background-color: var(--primary-main);
   color: var(--primary-on);
+
+  .title {
+    padding: 5px;
+    font-size: 20px;
+  }
 }
