--- a/src/popup/root.scss
+++ b/src/popup/root.scss
@@ -16,7 +16,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   color: #111;
 
@@ -36,4 +36,11 @@ body,
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   margin-left: 10px;
+}
+
+input {
+  background-color: var(--surface-main-light);
+  color: var(--surface-on);
+
+  border: none;
 }
