--- a/src/popup/app/header/styles.mod.scss
+++ b/src/popup/app/header/styles.mod.scss
@@ -9,6 +9,7 @@
 
   background-color: var(--primary-main);
   color: var(--primary-on);
+  border-bottom: 1px solid var(--primary-border);
 
   .title {
     padding: 5px;
