Refactoring toggle scripts for URL

--- a/src/popup/root.scss
+++ b/src/popup/root.scss
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'icomoon';
+  src: url('assets/fonts/icomoon.eot?p8hi8a');
+  src: url('assets/fonts/icomoon.eot?p8hi8a#iefix') format('embedded-opentype'),
+    url('assets/fonts/icomoon.ttf?p8hi8a') format('truetype'),
+    url('assets/fonts/icomoon.woff?p8hi8a') format('woff'),
+    url('assets/fonts/icomoon.svg?p8hi8a#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
 *,
 *:before,
 *:after {
